<!--
  ~ Copyright 2018-2019 Sandip Vaghela
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Expenses</string>

    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="admob_app_id">ca-app-pub-6628325093439880~3821097843</string>
    <string name="admob_exp_banner_1">ca-app-pub-6628325093439880/6668066114</string>
    <string name="choose_category">Choose Category</string>
    <string name="date_time_format">dd-MMM-yyyy hh:mm a</string>
    <string name="dialog_msg_no_network">No Network Available. Please check connection and try again.</string>
    <string name="dialog_title_no_network">No Network</string>
    <string name="fcm_channel_default">Updates</string>
    <string name="fcm_channel_id" translatable="false">fcm_default_channel</string>
    <string name="menu_new_group">New Group</string>
    <string name="menu_search">Search</string>
    <string name="msg_dialog_delete_expense">Are you sure you want to delete this expense?</string>
    <string name="msg_dialog_sign_in">Please Sign In to Continue</string>
    <string name="msg_dialog_sign_out">Do you want to Sign Out?</string>
    <string name="msg_grant_permission_request">Please grant permissions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_expenses">No Expenses.\nAdd by clicking \'+\'</string>
    <string name="no_groups">No Groups.\nCreate Group by clicking \'+\' above.</string>
    <string name="note">Note</string>
    <string name="paid_by">Paid By</string>
    <string name="pref_main_screen">pref_main_screen</string>
    <string name="rs_symbol">₹</string>
    <string name="select_date">Select Date</string>
    <string name="text_action_exit">Exit</string>
    <string name="text_action_grant">GRANT</string>
    <string name="text_amount">Amount</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_click_to_summary">Click to View Summary</string>
    <string name="text_delete">Delete</string>
    <string name="text_dialog_confirm">Confirm</string>
    <string name="text_edit">Edit</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_email">Email</string>
    <string name="text_group_name">Group Name</string>
    <string name="text_loading">Loading…</string>
    <string name="text_members">Members</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_name">Name</string>
    <string name="text_no_categories">No Categories. Why not crate one!</string>
    <string name="text_save">Save</string>
    <string name="text_select_category">Select Category</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_sign_out_success">Signed Out</string>
    <string name="text_uncategorized">Uncategorized</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="url_privacy_policy" translatable="false">http://afterroot.co/privacy-policy.html</string>
    <string name="view_summary">View Summary</string>
    <string name="with">With..</string>
    <string name="ti_helper_text_group_members">Enter email addresses you want to add to group.</string>
</resources>
